# PDL

./: .gitignore  CMakeLists.txt  CREDITS  README.md  config.m4  config.w32  install.sh  pdl.c  pdl.php  php_pdl.h  run-test.php
kernel/config/: pdl_config.c  pdl_config.h
kernel/main/: pdl_main.c  pdl_main.h
kernel/perform/: pdl_perform.c  pdl_perform.h
kernel/resource/: pdl_resource.c  pdl_resource.h
kernel/variable/: pdl_variable.c  pdl_variable.h
tests/: 001.phpt  002.phpt  003.phpt
